--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,23 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MNTN</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;800&family=Playfair+Display:wght@600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- Loads the specified .html file -->
-    <load src="partials/index.html" />
-
+    <div class="wrapper">
+      <!-- Loads the specified .html file -->
+      <load src="partials/header.html" />
+      <main>
+        <load src="partials/hero.html" />
+        <load src="partials/main-content.html" />
+      </main>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
