--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;800&family=Playfair+Display:wght@600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -21,7 +22,15 @@
         <load src="partials/hero.html" />
         <load src="partials/main-content.html" />
       </main>
+      <load src="partials/footer.html" />
     </div>
     <script type="module" src="/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        mirror: true,
+        duration: 1000,
+      });
+    </script>
   </body>
 </html>
