--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <load src="partials/loader.html" />
+
     <div class="wrapper">
       <!-- Loads the specified .html file -->
       <load src="partials/header.html" />
